rename from mimicry to servitor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "[go]": {
-        // format by running go fmt mimicry/... repeatedly until fixed point is reached
+        // format by running go fmt servitor/... repeatedly until fixed point is reached
         "editor.formatOnSave": false
     }
 }
